fix: korišćen getFirst umesto get zbog warninga u OmiljenaPorudzbinaServiceTest